# vision-camera-resize-plugin

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  babel.config.js  package.json  react-native-vision-camera-resize-plugin.podspec  tsconfig.json  vision-camera-resize-plugin.podspec
.github/workflows/: build-android.yml  build-ios.yml  ci.yml  validate-android.yml  validate-cpp.yml  validate-js.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties  libyuv
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: JImage.cpp  JImage.h  JImagePlane.cpp  JImagePlane.h  JMap.cpp  JMap.h  ResizePlugin.cpp  ResizePlugin.h  VisionCameraResizePlugin.cpp
android/src/main/java/com/visioncameraresizeplugin/: ResizePlugin.kt  VisionCameraResizePluginModule.java  VisionCameraResizePluginModule.kt  VisionCameraResizePluginPackage.java  VisionCameraResizePluginPackage.kt
android/src/newarch/: VisionCameraResizePluginSpec.java  VisionCameraResizePluginSpec.kt
android/src/oldarch/: VisionCameraResizePluginSpec.java  VisionCameraResizePluginSpec.kt
cpp/: react-native-vision-camera-resize-plugin.cpp  react-native-vision-camera-resize-plugin.h  vision-camera-resize-plugin.cpp
example/: app.json  babel.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/ios/: .xcode.env.local  File.swift  Podfile
example/ios/VisionCameraResizePluginExample/: AppDelegate.m  AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/VisionCameraResizePluginExample.xcodeproj/: project.pbxproj
example/ios/VisionCameraResizePluginExample.xcodeproj/xcshareddata/xcschemes/: VisionCameraResizePluginExample.xcscheme
example/ios/VisionCameraResizePluginExample.xcworkspace/: contents.xcworkspacedata
example/ios/VisionCameraResizePluginExampleTests/: VisionCameraResizePluginExampleTests.m
example/src/: App.tsx  SkiaUtils.ts
ios/: ConvertPlugin.mm  FrameBuffer.h  FrameBuffer.mm  FrameResizer.h  FrameResizer.mm  ResizePlugin.m  ResizePlugin.mm  VisionCameraResizePlugin.h  VisionCameraResizePlugin.m  VisionCameraResizePlugin.mm
ios/VisionCameraResizePlugin.xcodeproj/: project.pbxproj
scripts/: check-all.sh  clang-format.sh
src/: NativeVisionCameraResizePlugin.ts  index.ts  index.tsx
(+9 files in other folders)
